Prototype user-interfaces

--- a/Create-Account.html
+++ b/Create-Account.html
@@ -5,7 +5,26 @@
     </head>
     <body>
         <h1>Create Account</h1>
-        <h2>Become Member</h2>
-        <a href="index.html">HOME</a>
+        <td>E-mail Address:</td>
+        <input type="text"      placeholder="E-Mail">      <br>
+        <td>Username:</td>
+        <input type="text"      placeholder="Username">      <br>
+        <td>Password:</td>
+        <input type="password"      placeholder="Password">      <br>
+        <td>Confirm Password:</td>
+        <input type="password"      placeholder="Confirm Password">      <br>
+        <h2>Become Member</h2>      
+        <td>Would you like to enroll in our Membership program?:</td><br>
+        <select>
+            <option></option>
+            <option>Yes</option>
+            <option>No</option>
+            <option>Ask me Later</option>
+        </select>
+        
+        <br><br>             
+        <input type="button"    value="Create Account" onClick="location.href='ty-for-registering.html'">     <br>
+        
+        <br>        <a href="index.html">HOME</a>
     </body>
 </html>
