--- a/Login-to-account.html
+++ b/Login-to-account.html
@@ -5,6 +5,11 @@
     </head>
     <body>
         <h1>Login to account</h1>
+        <td>Username:</td>
+        <input type="text"      placeholder="Username">      <br>
+        <td>Password:</td>
+        <input type="password"      placeholder="Password">      <br><br>
+        <input type="button"    value="Login" onClick="location.href='Shop-for-groceries.html'">     <br><br>
         <a href="index.html">HOME</a>
     </body>
 </html>
