updated ty for registering page

--- a/ty-for-registering.html
+++ b/ty-for-registering.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html>
     <head>
-        <title>Shop For Groceries</title>
+        <title>Thank you for registering with us!</title>
     </head>
     <body>
         <h1>Thank you for registering with us!</h1>
